--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=activite-2
 spring.datasource.url = jdbc:h2:mem:products-db
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 server.port=8044
